--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,10 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "mutex": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp"
+  }
 }
